k8s/nginx/routes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.kryfitek.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kube-prometheus-stackr-grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.kryfitek.com
      secretName: grafana-kryfitek-com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-health
  namespace: backend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: api.kryfitek.com
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: health
                port:
                  number: 5000
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: frontend
#   namespace: frontend
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: www.krifitek.com
#       http:
#         paths:
#           - pathType: Prefix
#             path: /
#             backend:
#               service:
#                 name: frontend
#                 port:
#                   number: 80
